--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -73,10 +73,9 @@
         let today = new Date();
         let calDate = new Date('2022-11-01');
         if (calDate <= today) {
-            myModalTitle.innerHTML = '1<sup>er</sup> décembre';
+            myModalTitle.innerText = '1er décembre';
             myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49'05)<br />
-– Louis
-';
+– Louis';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
