--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -74,7 +74,7 @@
         let calDate = new Date('2022-11-01');
         if (calDate <= today) {
             myModalTitle.innerHTML = '1<sup>er</sup> décembre';
-            myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05)<p class="signature">– Louis</p>';
+            myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05) <p class="signature">– Louis</p>';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -86,7 +86,7 @@
         let calDate = new Date('2022-11-02');
         if (calDate <= today) {
             myModalTitle.innerText = '2 décembre';
-            myModalText.innerHTML = 'Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possibilités qui s’offrent à nous. Et là je rajoute juste du texte pour aller à 300 signes. Nous y voilà.';
+            myModalText.innerHTML = 'Pour cet hiver, vous vous sentez l’âme philosophe&nbsp;? On est deux&nbsp;! Suivez-moi, <a href="https://www.brief.me/Calendrier/alx0212/" target="_blank">je vous en dis plus ici</a>. <p class="signature">– Alexandre</p>';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -98,7 +98,7 @@
         let calDate = new Date('2022-11-03');
         if (calDate <= today) {
             myModalTitle.innerText = '3 décembre';
-            myModalText.innerHTML = 'Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possiblités qui s’offrent à nous. Aujourd’hui, un message vraiment long pour voir ce que ça donne quand on met un message vraiment long dans cette petite fenêtre de texte parce qu’après tout c’est bien de savoir quelles sont les possiblités qui s’offrent à nous.';
+            myModalText.innerHTML = 'Pas facile de faire sourire avec l’actualité économique. C’est le défi que relève chaque semaine notre dessinateur Cyrille Berger. Quand je lui ai demandé de se pencher sur les déserts médicaux, j’avais peur qu’il s’arrache les cheveux… Finalement, c’est moi qui ai ri à m’en décrocher la mâchoire. Allez, c’est <a href="https://www.brief.eco/editorial/news/img/1646/focus/0/wink/" target="_blank">cadeau</a>&nbsp;! <p class="signature">– Céline</p>';
         } else {
             myModalTitle.innerText = 'Saperlipopette !';
             myModalText.innerText = 'C\'est absolument interdit !';
