--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -76,7 +76,7 @@
             myModalTitle.innerHTML = '1<sup>er</sup> décembre';
             myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05) <p class="signature">– Louis</p>';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -88,7 +88,7 @@
             myModalTitle.innerText = '2 décembre';
             myModalText.innerHTML = 'Pour cet hiver, vous vous sentez l’âme philosophe&nbsp;? On est deux&nbsp;! Suivez-moi, <a href="https://www.brief.me/Calendrier/alx0212/" target="_blank">je vous en dis plus ici</a>. <p class="signature">– Alexandre</p>';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -100,7 +100,7 @@
             myModalTitle.innerText = '3 décembre';
             myModalText.innerHTML = 'Pas facile de faire sourire avec l’actualité économique. C’est le défi que relève chaque semaine notre dessinateur Cyrille Berger. Quand je lui ai demandé de se pencher sur les déserts médicaux, j’avais peur qu’il s’arrache les cheveux… Finalement, c’est moi qui ai ri à m’en décrocher la mâchoire. Allez, c’est <a href="https://www.brief.eco/editorial/news/img/1646/focus/0/wink/" target="_blank">cadeau</a>&nbsp;! <p class="signature">– Céline</p>';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -110,9 +110,9 @@
         let calDate = new Date('2022-11-04');
         if (calDate <= today) {
             myModalTitle.innerText = '4 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'XXX';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -122,9 +122,9 @@
         let calDate = new Date('2022-11-05');
         if (calDate <= today) {
             myModalTitle.innerText = '5 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Grande consommatrice de podcasts (j’en écoute une à deux heures par jour), voici <a href="https://www.brief.me/Calendrier/avm0512/" target="_blank">mon top 5 de l’année 2022</a>. <p class="signature">– Aude</p>';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -134,9 +134,9 @@
         let calDate = new Date('2022-11-06');
         if (calDate <= today) {
             myModalTitle.innerText = '6 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Je l’ai recommandée à toutes les personnes que j’ai croisées ces derniers mois, alors vous n’y couperez pas : il faut que vous voyiez la série «&nbsp;Parlement&nbsp;», dont la deuxième saison a été diffusée cette année. En plus elle est disponible gratuitement <a href="https://www.france.tv/slash/parlement/" target="_blank">sur le site de France.tv</a>. On aimerait rire autant chaque fois qu’on explique l’UE. <p class="signature">– Nicolas</p>';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -148,7 +148,7 @@
             myModalTitle.innerText = '7 décembre';
             myModalText.innerHTML = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -160,7 +160,7 @@
             myModalTitle.innerText = '8 décembre';
             myModalText.innerHTML = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -170,9 +170,9 @@
         let calDate = new Date('2022-11-09');
         if (calDate <= today) {
             myModalTitle.innerText = '9 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'J’ai découvert le poker il y a plus de 20 ans. Je joue en association et je participe à des tournois régionaux et nationaux. Les compétitions demandent une maîtrise mathématique, psychologique et une gestion du stress importante. Bluffer, apprendre à lire le jeu de ses adversaires, calculer les probabilités sont les choses avec lesquelles on s’amuse à chaque nouvelle partie. Voici <a href="https://www.jouerpokergratuit.com/apprendre-a-jouer-au-poker-gratuitement" target="_blank">un site pour découvrir les règles et le jeu en tournoi</a>. <p class="signature">– Sofyan</p>';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -184,7 +184,7 @@
             myModalTitle.innerText = '10 décembre';
             myModalText.innerHTML = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -196,7 +196,7 @@
             myModalTitle.innerText = '11 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -208,7 +208,7 @@
             myModalTitle.innerText = '12 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -220,7 +220,7 @@
             myModalTitle.innerText = '13 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -232,7 +232,7 @@
             myModalTitle.innerText = '14 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -244,7 +244,7 @@
             myModalTitle.innerText = '15 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -256,7 +256,7 @@
             myModalTitle.innerText = '16 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -268,7 +268,7 @@
             myModalTitle.innerText = '17 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -280,7 +280,7 @@
             myModalTitle.innerText = '18 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -292,7 +292,7 @@
             myModalTitle.innerText = '19 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -304,7 +304,7 @@
             myModalTitle.innerText = '20 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -316,7 +316,7 @@
             myModalTitle.innerText = '21 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -328,7 +328,7 @@
             myModalTitle.innerText = '22 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -340,7 +340,7 @@
             myModalTitle.innerText = '23 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
@@ -352,7 +352,7 @@
             myModalTitle.innerText = '24 décembre';
             myModalText.innerText = 'message case';
         } else {
-            myModalTitle.innerText = 'Saperlipopette !';
+            myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
         }
     })
