--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -74,7 +74,7 @@
         let calDate = new Date('2022-11-01');
         if (calDate <= today) {
             myModalTitle.innerHTML = '1<sup>er</sup> décembre';
-            myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05) <p class="signature">– Louis</p>';
+            myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank" rel="noopener">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05) <p class="signature">– Louis</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -86,7 +86,7 @@
         let calDate = new Date('2022-11-02');
         if (calDate <= today) {
             myModalTitle.innerText = '2 décembre';
-            myModalText.innerHTML = 'Pour cet hiver, vous vous sentez l’âme philosophe&nbsp;? On est deux&nbsp;! Suivez-moi, <a href="https://www.brief.me/Calendrier/alx0212/" target="_blank">je vous en dis plus ici</a>. <p class="signature">– Alexandre</p>';
+            myModalText.innerHTML = 'Pour cet hiver, vous vous sentez l’âme philosophe&nbsp;? On est deux&nbsp;! Suivez-moi, <a href="https://www.brief.me/Calendrier/alx0212/" target="_blank" rel="noopener">je vous en dis plus ici</a>. <p class="signature">– Alexandre</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -98,7 +98,7 @@
         let calDate = new Date('2022-11-03');
         if (calDate <= today) {
             myModalTitle.innerText = '3 décembre';
-            myModalText.innerHTML = 'Pas facile de faire sourire avec l’actualité économique. C’est le défi que relève chaque semaine notre dessinateur Cyrille Berger. Quand je lui ai demandé de se pencher sur les déserts médicaux, j’avais peur qu’il s’arrache les cheveux… Finalement, c’est moi qui ai ri à m’en décrocher la mâchoire. Allez, c’est <a href="https://www.brief.eco/editorial/news/img/1646/focus/0/wink/" target="_blank">cadeau</a>&nbsp;! <p class="signature">– Céline</p>';
+            myModalText.innerHTML = 'Pas facile de faire sourire avec l’actualité économique. C’est le défi que relève chaque semaine notre dessinateur Cyrille Berger. Quand je lui ai demandé de se pencher sur les déserts médicaux, j’avais peur qu’il s’arrache les cheveux… Finalement, c’est moi qui ai ri à m’en décrocher la mâchoire. Allez, c’est <a href="https://www.brief.eco/editorial/news/img/1646/focus/0/wink/" target="_blank" rel="noopener">cadeau</a>&nbsp;! <p class="signature">– Céline</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -122,7 +122,7 @@
         let calDate = new Date('2022-11-05');
         if (calDate <= today) {
             myModalTitle.innerText = '5 décembre';
-            myModalText.innerHTML = 'Grande consommatrice de podcasts (j’en écoute une à deux heures par jour), voici <a href="https://www.brief.me/Calendrier/avm0512/" target="_blank">mon top 5 de l’année 2022</a>. <p class="signature">– Aude</p>';
+            myModalText.innerHTML = 'Grande consommatrice de podcasts (j’en écoute une à deux heures par jour), voici <a href="https://www.brief.me/Calendrier/avm0512/" target="_blank" rel="noopener">mon top 5 de l’année 2022</a>. <p class="signature">– Aude</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -134,7 +134,7 @@
         let calDate = new Date('2022-11-06');
         if (calDate <= today) {
             myModalTitle.innerText = '6 décembre';
-            myModalText.innerHTML = 'Je l’ai recommandée à toutes les personnes que j’ai croisées ces derniers mois, alors vous n’y couperez pas : il faut que vous voyiez la série «&nbsp;Parlement&nbsp;», dont la deuxième saison a été diffusée cette année. En plus elle est disponible gratuitement <a href="https://www.france.tv/slash/parlement/" target="_blank">sur le site de France.tv</a>. On aimerait rire autant chaque fois qu’on explique l’UE. <p class="signature">– Nicolas</p>';
+            myModalText.innerHTML = 'Allez, offrons-nous des images d&rsquo;animaux mignons. Que diriez-vous d&rsquo;une <a href="https://www.instagram.com/p/BZB4S4bBL3z/?hl=fr" target="_blank" rel="noopener">petite belette des neiges</a>&nbsp;? On vous avait recommand&eacute; en septembre <a href="https://app.brief.me/article/2022-09-23-14450-dans-le-grand-froid-avec-loups-mouflons-et-belettes-des-neiges" target="_blank" rel="noopener">le t&eacute;moignage du photographe</a>. Si vous &ecirc;tes plut&ocirc;t <a href="https://app.brief.me/article/2022-05-19-13944-des-hamsters-attendrissants" target="_blank" rel="noopener">hamsters</a>, <a href="https://app.brief.me/article/2022-07-04-14154-herissons-dorlotes" target="_blank" rel="noopener">h&eacute;rissons</a> ou <a href="https://app.brief.me/article/2022-06-30-14140-nid-decureuil-en-construction" target="_blank" rel="noopener">&eacute;cureuils</a>, on a aussi. <p class="signature">– Nicolas</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -170,7 +170,7 @@
         let calDate = new Date('2022-11-09');
         if (calDate <= today) {
             myModalTitle.innerText = '9 décembre';
-            myModalText.innerHTML = 'J’ai découvert le poker il y a plus de 20 ans. Je joue en association et je participe à des tournois régionaux et nationaux. Les compétitions demandent une maîtrise mathématique, psychologique et une gestion du stress importante. Bluffer, apprendre à lire le jeu de ses adversaires, calculer les probabilités sont les choses avec lesquelles on s’amuse à chaque nouvelle partie. Voici <a href="https://www.jouerpokergratuit.com/apprendre-a-jouer-au-poker-gratuitement" target="_blank">un site pour découvrir les règles et le jeu en tournoi</a>. <p class="signature">– Sofyan</p>';
+            myModalText.innerHTML = 'J’ai découvert le poker il y a plus de 20 ans. Je joue en association et je participe à des tournois régionaux et nationaux. Bluffer, apprendre à lire le jeu de ses adversaires, calculer les probabilités sont les choses avec lesquelles on s’amuse à chaque nouvelle partie. Voici <a href="https://www.jouerpokergratuit.com/apprendre-a-jouer-au-poker-gratuitement" target="_blank" rel="noopener">un site pour découvrir les règles</a>. <p class="signature">– Sofyan</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -182,7 +182,7 @@
         let calDate = new Date('2022-11-10');
         if (calDate <= today) {
             myModalTitle.innerText = '10 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Connaissez-vous une discipline o&ugrave; les Fran&ccedil;ais excellent&nbsp;? La gastronomie, certes, mais aussi la bande dessin&eacute;e et le cin&eacute;ma d&rsquo;animation&nbsp;! Laissez-moi vous <a href="https://www.brief.me/Calendrier/ald1012/" target="_blank" rel="noopener">parler de &laquo;&nbsp;Lastman&nbsp;&raquo;</a>. <p class="signature">– Alexandre</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -194,7 +194,7 @@
         let calDate = new Date('2022-11-11');
         if (calDate <= today) {
             myModalTitle.innerText = '11 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -206,7 +206,7 @@
         let calDate = new Date('2022-11-12');
         if (calDate <= today) {
             myModalTitle.innerText = '12 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -218,7 +218,7 @@
         let calDate = new Date('2022-11-13');
         if (calDate <= today) {
             myModalTitle.innerText = '13 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'Je l’ai recommandée à toutes les personnes que j’ai croisées ces derniers mois, alors vous n’y couperez pas : il faut que vous voyiez la série «&nbsp;Parlement&nbsp;», dont la deuxième saison a été diffusée cette année. En plus elle est disponible gratuitement <a href="https://www.france.tv/slash/parlement/" target="_blank">sur le site de France.tv</a>. On aimerait rire autant chaque fois qu’on explique l’UE. <p class="signature">– Nicolas</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -230,7 +230,7 @@
         let calDate = new Date('2022-11-14');
         if (calDate <= today) {
             myModalTitle.innerText = '14 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'Les bredele sont des petits biscuits alsaciens que l&rsquo;on offre &agrave; la p&eacute;riode de No&euml;l. De nombreuses sortes existent, mais je me limiterais &agrave; mes deux biscuits pr&eacute;f&eacute;r&eacute;s&nbsp;: les butterbredele et les pommes de terre. <a href="https://www.brief.me/Calendrier/agt1412/" target="_blank" rel="noopener">Les recettes sont juste ici</a>. <p class="signature">– Agathe</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -242,7 +242,7 @@
         let calDate = new Date('2022-11-15');
         if (calDate <= today) {
             myModalTitle.innerText = '15 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -254,7 +254,7 @@
         let calDate = new Date('2022-11-16');
         if (calDate <= today) {
             myModalTitle.innerText = '16 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'Le soufisme est un art mystique qui a pour but de trouver la voie d’élévation spirituelle, un chemin initiatique de transformation intérieure. Je vous invite à découvrir l’art soufi au travers des <a href="https://mmindfulness.fr/40-regles-mystique-soufi-rumi/" target="_blank" rel="noopener">40 règles d’Amour</a> selon Shamz Tabriz. <p class="signature">– Sofyan</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -266,7 +266,7 @@
         let calDate = new Date('2022-11-17');
         if (calDate <= today) {
             myModalTitle.innerText = '17 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = '&laquo;&nbsp;Mes enfants, je pourrais mourir pour eux, mais je pourrais aussi les tuer.&nbsp;&raquo; C&rsquo;est l&rsquo;une des phrases cultes de <a href="https://www.canalplus.com/series/breeders/h/13357171_50001" target="_blank" rel="noopener">la s&eacute;rie &laquo;&nbsp;Breeders&nbsp;&raquo; [&euro;]</a>, que je recommande chaudement &agrave; tous les parents. Pour &eacute;viter d&rsquo;en arriver l&agrave;, vous pouvez aussi <a href="https://podcast.ausha.co/caroline-goldman-docteur-en-psychologie-de-l-enfant/etablir-les-limites-educatives" target="_blank" rel="noopener">&eacute;couter ce podcast</a> de la psychologue Caroline Goldman. Pour moi, &ccedil;a a &eacute;t&eacute; une r&eacute;v&eacute;lation. Et la voie (voix) que j&rsquo;ai suivie pour retrouver un peu de calme &agrave; la maison. <p class="signature">– Céline</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -278,7 +278,7 @@
         let calDate = new Date('2022-11-18');
         if (calDate <= today) {
             myModalTitle.innerText = '18 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -290,7 +290,7 @@
         let calDate = new Date('2022-11-19');
         if (calDate <= today) {
             myModalTitle.innerText = '19 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -302,7 +302,7 @@
         let calDate = new Date('2022-11-20');
         if (calDate <= today) {
             myModalTitle.innerText = '20 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'Afin de ravir les papilles de vos convives durant les f&ecirc;tes, je vous partage <a href="https://www.brief.me/Calendrier/audv2012/" target="_blank" rel="noopener">ma super recette de lemon squares</a>. <p class="signature">– Aude</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -314,7 +314,7 @@
         let calDate = new Date('2022-11-21');
         if (calDate <= today) {
             myModalTitle.innerText = '21 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = '&Agrave; l&rsquo;approche des f&ecirc;tes de fin d&rsquo;ann&eacute;e, je vous propose de troquer vos Disney pour les films du studio Ghibli. En tant que grande fan de ces longs-m&eacute;trages d&rsquo;animation japonais, <a href="https://www.brief.me/Calendrier/imn2112/" target="_blank" rel="noopener">j&rsquo;aimerais vous en partager cinq</a>. <p class="signature">– Imène</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -326,7 +326,7 @@
         let calDate = new Date('2022-11-22');
         if (calDate <= today) {
             myModalTitle.innerText = '22 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -338,7 +338,7 @@
         let calDate = new Date('2022-11-23');
         if (calDate <= today) {
             myModalTitle.innerText = '23 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -350,7 +350,7 @@
         let calDate = new Date('2022-11-24');
         if (calDate <= today) {
             myModalTitle.innerText = '24 décembre';
-            myModalText.innerText = 'message case';
+            myModalText.innerHTML = 'message case';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
