--- a/Calendrier/memory/jeu-du-memory.html
+++ b/Calendrier/memory/jeu-du-memory.html
@@ -23,7 +23,7 @@
 			<div style="float:left;width:10%;height:50px;"></div>
 			<div style="float:left;width:80%;height:50px;text-align:center;">
 			
-			<h1>Memory : retrouve les images identiques</h1>
+			<h1>Good Memories : retrouve les images identiques</h1>
 			
 			</div>
 					
