--- a/Calendrier/memory/jeu-du-memory.html
+++ b/Calendrier/memory/jeu-du-memory.html
@@ -17,9 +17,6 @@
 			<div style="width:100%;display:block;text-align:center;">
 			</div>
 			
-			<div class="div_saut_ligne" style="height:200px;">
-			</div>						
-			
 			<div style="float:left;width:10%;height:50px;"></div>
 			<div style="float:left;width:80%;height:50px;text-align:center;">
 			
@@ -29,16 +26,13 @@
 					
 			<div style="float:left;width:10%;height:50px;"></div>
 			
-			<div class="div_saut_ligne">
-			</div>		
-			
 			<div style="width:100%;height:auto;text-align:center;">
 						
 			<div style="width:1500px;display:inline-block;" id="conteneur">
 			
-				<div class="centre">
+				<!-- <div class="centre">
 					<h2>Clique sur les cases pour trouver les correspondances.</h2>
-				</div>
+				</div> -->
 			
 				<div class="colonne" id="liste">
 					<div id="grille">
