--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -74,7 +74,7 @@
         let calDate = new Date('2022-11-01');
         if (calDate <= today) {
             myModalTitle.innerHTML = '1<sup>er</sup> décembre';
-            myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank" rel="noopener">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05) <p class="signature">– Louis</p>';
+            myModalText.innerHTML = 'Les bredele sont des petits biscuits alsaciens que l&rsquo;on offre &agrave; la p&eacute;riode de No&euml;l. De nombreuses sortes existent, mais je me limiterais &agrave; mes deux biscuits pr&eacute;f&eacute;r&eacute;s&nbsp;: les butterbredele et les pommes de terre. <a href="https://www.brief.me/Calendrier/agt1412/" target="_blank" rel="noopener">Les recettes sont juste ici</a>. <p class="signature">– Agathe</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -110,7 +110,7 @@
         let calDate = new Date('2022-11-04');
         if (calDate <= today) {
             myModalTitle.innerText = '4 décembre';
-            myModalText.innerHTML = 'XXX';
+            myModalText.innerHTML = 'Je vous propose de d&eacute;couvrir <a href="https://www.brief.me/Calendrier/tmc0412/" target="_blank" rel="noopener">deux jeux vid&eacute;o</a> d&eacute;velopp&eacute;s par des studios ind&eacute;pendants. <p class="signature">– Thomas</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -146,7 +146,7 @@
         let calDate = new Date('2022-11-07');
         if (calDate <= today) {
             myModalTitle.innerText = '7 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Quoi de mieux que d&rsquo;offrir du rire&nbsp;? Pour ce calendrier de l&rsquo;Avent, je vous recommande d&rsquo;aller voir le sketch de l&rsquo;humoriste Haroun &ndash;&nbsp;mon pr&eacute;f&eacute;r&eacute;&nbsp;&ndash; sur la campagne pour l&rsquo;&eacute;lection pr&eacute;sidentielle 2022. C&rsquo;est piquant comme on aime et <a href="https://www.youtube.com/watch?v=WfaLSdUcWyI" target="_blank" rel="noopener">c&rsquo;est par ici</a>&nbsp;! <p class="signature">– Mathilde</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -230,7 +230,7 @@
         let calDate = new Date('2022-11-14');
         if (calDate <= today) {
             myModalTitle.innerText = '14 décembre';
-            myModalText.innerHTML = 'Les bredele sont des petits biscuits alsaciens que l&rsquo;on offre &agrave; la p&eacute;riode de No&euml;l. De nombreuses sortes existent, mais je me limiterais &agrave; mes deux biscuits pr&eacute;f&eacute;r&eacute;s&nbsp;: les butterbredele et les pommes de terre. <a href="https://www.brief.me/Calendrier/agt1412/" target="_blank" rel="noopener">Les recettes sont juste ici</a>. <p class="signature">– Agathe</p>';
+            myModalText.innerHTML = 'Je vous invite à regarder <a href="https://www.youtube.com/watch?v=0gA7A4p2KUw" target="_blank" rel="noopener">la rediffusion du concert de Vulfpeck</a> à la Villette en septembre (mention spéciale pour le solo de Nate Smith à la batterie à 49’05) <p class="signature">– Louis</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
