--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -158,7 +158,7 @@
         let calDate = new Date('2022-11-08');
         if (calDate <= today) {
             myModalTitle.innerText = '8 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Pour vous r&eacute;chauffer cet hiver, je vous propose <a href="https://www.brief.me/Calendrier/gsp0812/" target="_blank" rel="noopener">la recette d&rsquo;un cocktail revigorant</a>. <p class="signature">– Gaspard</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -326,7 +326,7 @@
         let calDate = new Date('2022-11-22');
         if (calDate <= today) {
             myModalTitle.innerText = '22 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Pour vous aider &agrave; survivre au repas de famille ou tout simplement pour pimenter ces f&ecirc;tes avec un peu d&rsquo;humour, la r&eacute;daction de B&zwnj;r&zwnj;i&zwnj;e&zwnj;f&zwnj;.&zwnj;m&zwnj;e vous offre un <a href="https://www.brief.me/Calendrier/mtb2212/" target="_blank" rel="noopener">Bingo de No&euml;l</a>&nbsp;! <p class="signature">– L’équipe de Brief.me</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -338,7 +338,7 @@
         let calDate = new Date('2022-11-23');
         if (calDate <= today) {
             myModalTitle.innerText = '23 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'Je vous propose mon top&nbsp;3 des animes tir&eacute;s de mangas. <p class="signature">– Thomas</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
