--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -338,7 +338,7 @@
         let calDate = new Date('2022-11-23');
         if (calDate <= today) {
             myModalTitle.innerText = '23 décembre';
-            myModalText.innerHTML = 'Je vous propose mon top&nbsp;3 des animes tir&eacute;s de mangas. <p class="signature">– Thomas</p>';
+            myModalText.innerHTML = 'Je vous propose <a href="https://www.brief.me/Calendrier/tcb2312/" target="_blank" rel="noopener">mon top&nbsp;3 des animes tir&eacute;s de mangas</a>. <p class="signature">– Thomas</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
