--- a/CalendrierBM/index.html
+++ b/CalendrierBM/index.html
@@ -326,7 +326,7 @@
         let calDate = new Date('2022-11-22');
         if (calDate <= today) {
             myModalTitle.innerText = '22 décembre';
-            myModalText.innerHTML = 'Pour vous aider &agrave; survivre au repas de famille ou tout simplement pour pimenter ces f&ecirc;tes avec un peu d&rsquo;humour, la r&eacute;daction de B&zwnj;r&zwnj;i&zwnj;e&zwnj;f&zwnj;.&zwnj;m&zwnj;e vous offre un <a href="https://www.brief.me/Calendrier/mtb2212/" target="_blank" rel="noopener">Bingo de No&euml;l</a>&nbsp;! <p class="signature">– L’équipe de Brief.me</p>';
+            myModalText.innerHTML = 'Pour vous aider &agrave; survivre au repas de famille ou tout simplement pour pimenter ces f&ecirc;tes avec un peu d&rsquo;humour, l’équipe de B&zwnj;r&zwnj;i&zwnj;e&zwnj;f&zwnj;.&zwnj;m&zwnj;e vous offre un <a href="https://www.brief.me/Calendrier/mtb2212/" target="_blank" rel="noopener">Bingo de No&euml;l</a>&nbsp;! <p class="signature">– L’équipe de Brief.me</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
@@ -350,7 +350,7 @@
         let calDate = new Date('2022-11-24');
         if (calDate <= today) {
             myModalTitle.innerText = '24 décembre';
-            myModalText.innerHTML = 'message case';
+            myModalText.innerHTML = 'On vous a fait une petite sélection d’albums de musique qu’on a aimés cette année. <a href="https://www.brief.me/Calendrier/colbm2412/" target="_blank" rel="noopener">C’est par ici</a>. <p class="signature">– L’équipe de Brief.me</p>';
         } else {
             myModalTitle.innerText = 'Ouh là là !';
             myModalText.innerText = 'C\'est absolument interdit !';
